fix(entity): them @Builder.Default cho Order va Payment va cap nhat cau hinh test